--- a/lombok.config
+++ b/lombok.config
@@ -851,7 +851,7 @@ lombok.nonNull.exceptionType = JDK
 ## Examples:
 #
 # clear lombok.var.flagUsage
-# lombok.var.flagUsage = [WARNING | ERROR | ALLOW]
+ lombok.var.flagUsage = [ALLOW]
 #
 
 ##
