--- a/client/build.gradle
+++ b/client/build.gradle
@@ -5,7 +5,7 @@
 
 plugins {
     id 'java'
-    id "io.freefair.lombok"
+    id "io.freefair.lombok" version "8.0.1"
     id 'jacoco'
     id 'com.github.johnrengelman.shadow'
     id 'maven-publish'
