--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,7 +7,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id "io.freefair.lombok"
+    id "io.freefair.lombok" version "8.0.1"
 }
 
 dependencies {
