--- a/ml-algorithms/build.gradle
+++ b/ml-algorithms/build.gradle
@@ -8,7 +8,7 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 plugins {
     id 'java'
     id 'jacoco'
-    id "io.freefair.lombok"
+    id "io.freefair.lombok" version "8.0.1"
 }
 
 repositories {
