changing lucene location
Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

--- a/build-tools/repositories.gradle
+++ b/build-tools/repositories.gradle
@@ -8,5 +8,5 @@ repositories {
     maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
     mavenCentral()
     maven {url 'https://oss.sonatype.org/content/repositories/snapshots/'}
-    maven { url "https://d1nvenhzbhpy0q.cloudfront.net/snapshots/lucene/" }
+    maven { url "https://artifacts.opensearch.org/snapshots/lucene/" }
 }
