Adding back Mingshi as Maintainer. (#3367)
* adding more log to debug the testVisualizationFound issue

Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

* changing back

Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

* adding mingshi as maintainer

Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

---------

Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @b4sjoo @dhrubo-os @jngz-es @model-collapse @rbhavna @wujunshen @ylwu-amzn @zane-neo @Zhangxunmt @austintlee @HenryL27 @samuel-oci
+*   @b4sjoo @dhrubo-os @mingshl @jngz-es @model-collapse @rbhavna @ylwu-amzn @zane-neo @Zhangxunmt @austintlee @HenryL27 @samuel-oci @xinyual
