fix: fix integ test for ML inference range query rewrite
- RestMLInferenceSearchRequestProcessorIT: Remove pre/post process
  functions from Bedrock connector so raw response is available as
  dataAsMap. Use embedding.length() to get embedding dimension as
  integer for the range query. Use diary_embedding_size_int (integer
  field) instead of diary_embedding_size (keyword field).

- RestMLRAGSearchProcessorIT: Update Cohere model from
  command-a-03-2025 (v2 API only) to command-r-08-2024 (v1 API).

- plugin/build.gradle: Add bc-fips to unit test classpath in FIPS mode
  via detached configuration to fix NoClassDefFoundError.

Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -199,6 +199,13 @@ def _numNodes = findProperty('numNodes') as Integer ?: 1
 test {
     include '**/*Tests.class'
     systemProperty 'tests.security.manager', 'false'
+    // In FIPS mode, bc-fips is excluded from the plugin bundle to avoid jar hell with OpenSearch core.
+    // Unit tests don't run inside OpenSearch, so we add bc-fips directly to the test classpath.
+    if (FipsBuildParams.isInFipsMode()) {
+        classpath += configurations.detachedConfiguration(
+            dependencies.create("org.bouncycastle:bc-fips:2.1.2")
+        )
+    }
 }
 
 def opensearch_tmp_dir = rootProject.file('build/private/opensearch_tmp').absoluteFile
